--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 
     <!-- Nosso JS -->
-    <script src="./assets/js/main.js" defer></script>
+<script src="./assets/js/main.js" defer></script>
 </head>
 
 <body>
@@ -28,9 +28,10 @@
     </header>
 
     <ol class="pokemons">
-        <li class="pokemon">
+        <li class="pokemon ">
             <span class="number">#001</span>
             <span class="name">Bulbasaur</span>
+
             <div class="detail">
                 <ol class="types">
                     <li class="type">Grass</li>
@@ -38,7 +39,7 @@
                 </ol>
 
                 <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                    alt="Bulbasaur">
+                alt="Ivysaur">
             </div>
         </li>
 
