--- a/index.html
+++ b/index.html
@@ -23,27 +23,10 @@
 </head>
 
 <body>
-    <header class="content">
-        <h1>Pokedéx</h1>
-    </header>
+    <h1 class="content">Pokedéx</h1>
+    <ol id="pokemonList" class="pokemons">
 
-    <ol class="pokemons">
-        <li class="pokemon ">
-            <span class="number">#001</span>
-            <span class="name">Bulbasaur</span>
-
-            <div class="detail">
-                <ol class="types">
-                    <li class="type">Grass</li>
-                    <li class="type">Poison</li>
-                </ol>
-
-                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                alt="Ivysaur">
-            </div>
-        </li>
-
-        <!--<li class="pokemon">
+        <!-- <li class="pokemon">
             <span class="number">#002</span>
             <span class="name">Ivysaur</span>
 
@@ -58,13 +41,23 @@
         </li>
         <li class="pokemon">
             <header>Venusaur</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
-                alt="Venusaur">
+            <div class="detail">
+                <ol class="types">
+                    <li class="type">Grass</li>
+                    <li class="type">Poison</li>
+                </ol>
+                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
+                    alt="Venusaur">
         </li>
         <li class="pokemon">
             <header>Charmander</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
-                alt="Charmander">
+            <div class="detail">
+                <ol class="types">
+                    <li class="type">Grass</li>
+                    <li class="type">Poison</li>
+                </ol>
+                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
+                    alt="Charmander">
         </li>
         <li class="pokemon">
             <header>Charmeleon</header>
@@ -90,7 +83,7 @@
             <header>Blastoise</header>
             <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg"
                 alt="Blastoise">
-        </li>-->
+        </li> -->
 </body>
 
 </html>
