edit main.js logic

--- a/index.html
+++ b/index.html
@@ -19,71 +19,15 @@
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 
     <!-- Nosso JS -->
-<script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/pokeapi.js"></script>
+    <script src="./assets/js/main.js" defer></script>
 </head>
 
 <body>
     <h1 class="content">Pokedéx</h1>
     <ol id="pokemonList" class="pokemons">
-
-        <!-- <li class="pokemon">
-            <span class="number">#002</span>
-            <span class="name">Ivysaur</span>
-
-            <div class="detail">
-                <ol class="types">
-                    <li class="type">Grass</li>
-                    <li class="type">Poison</li>
-                </ol>
-                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
-                    alt="Ivysaur">
-            </div>
-        </li>
-        <li class="pokemon">
-            <header>Venusaur</header>
-            <div class="detail">
-                <ol class="types">
-                    <li class="type">Grass</li>
-                    <li class="type">Poison</li>
-                </ol>
-                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
-                    alt="Venusaur">
-        </li>
-        <li class="pokemon">
-            <header>Charmander</header>
-            <div class="detail">
-                <ol class="types">
-                    <li class="type">Grass</li>
-                    <li class="type">Poison</li>
-                </ol>
-                <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
-                    alt="Charmander">
-        </li>
-        <li class="pokemon">
-            <header>Charmeleon</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
-                alt="Charmeleon">
-        </li>
-        <li class="pokemon">
-            <header>Charizard</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
-                alt="Charizard">
-        </li>
-        <li class="pokemon">
-            <header>Squirtle</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg"
-                alt="Squirtle">
-        </li>
-        <li class="pokemon">
-            <header>Wartortle</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg"
-                alt="Wartortle">
-        </li>
-        <li class="pokemon">
-            <header>Blastoise</header>
-            <img src="//raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg"
-                alt="Blastoise">
-        </li> -->
+        
+    </ol>
 </body>
 
 </html>
