--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>Pokedex</title>
-
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -25,13 +24,12 @@
 </head>
 
 <body>
-    <header><h1 class="content">Pokedex</h1></header>
+    <header class="content"><h1>Pokedex</h1></header>
     <ol id="pokemonList" class="pokemons"></ol>
     <div class="pagination">
-        <button type="button" id="loadMoreButton">
-            Load More
-        </button>
-    </div>
+    <button type="button" id="loadMoreButton">Load More</button></div>
+    <a href="https://icons8.com/icon/16460/pokedex">Pokedex</a> icon by <a href="https://icons8.com">Icons8</a>
+
 </body>
 
 </html>
