add media queries

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <header class="content"><h1>Pokedex</h1></header>
     <ol id="pokemonList" class="pokemons"></ol>
     <div class="pagination">
-    <button type="button" id="loadMoreButton">Load More</button></div>
-    <a href="https://icons8.com/icon/16460/pokedex">Pokedex</a> icon by <a href="https://icons8.com">Icons8</a>
+        <button type="button" id="loadMoreButton">Load More</button>
+    </div>
 
 </body>
 
